@@ -246,7 +246,9 @@ library directory.  Users can add there the names of other directories
 containing frequently-used shared libraries; however, for consistency
 of installation, we recommend that shared libraries are installed
 directly in the system "stublibs" directory, rather than adding lines
-to the "ld.conf" file.
+to the "ld.conf" file. "ocamlrun" will add lines from "ld.conf" files
+found in the directories pointed to by "OCAMLLIB", "CAMLLIB" and the
+standard library directory, in that order.
 \item Default directories searched by the system dynamic loader.
 Under Unix, these generally include "/lib" and "/usr/lib", plus the
 directories listed in the file "/etc/ld.so.conf" and the environment
