@@ -1,5 +1,12 @@
 OCaml 4.14.0
 
+### Runtime system:
+
+- #10???: Bytecode loads ld.conf from all of $OCAMLLIB/ld.conf, $CAMLLIB/ld.conf
+  and standard_library_default/ld.conf rather than just the first one of these
+  encountered.
+  (David Allsopp, review by ???)
+
 ### Build system:
 
 - #10???: --with-target-bindir configure option implemented. This option
